# enformer-embeddings

./: .gitignore  .gitmodules  CLAUDE.md  README.md  final_embeddings_processor.py  main.py  note.md  parallel_embeddings_processor.py  pyproject.toml  test_parallel_100.py  tutorial.ipynb
data/166k_rice/: merge.ipynb
embeddings/: sequence_embedder.py
retrieve_embeddings/: __init__.py  cli.py  retrieve_embeddings.py  util.py
scripts/: estimate_runtime.py  estimate_runtime_fixed.py  process_all_embeddings.py  simple_runtime_estimate.py  test_embeddings.py
test/: fetch_rename_test.py  test_pre_embeddings.py
test_files/: test.fasta
