[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enformer-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "enformer-pytorch>=0.8.11",
    "ipykernel>=6.29.5",
    "pandas>=2.3.1",
    "biopython>=1.83",
    "torch",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "pytest>=7.4.0",
]

[tool.setuptools]
packages = ["retrieve_embeddings"]

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
pytorch-triton = { index = "pytorch-nightly" }
triton = { index = "pytorch-nightly" }

[tool.uv]
prerelease = "allow"
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu126"
explicit = true
