[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enformer-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "enformer-pytorch>=0.8.11",
    "ipykernel>=6.29.5",
    "pandas>=2.3.1",
    "biopython>=1.83",
    "torch",
    "torchvision",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "pytest>=7.4.0",
]

[tool.setuptools]
packages = ["retrieve_embeddings"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
